default/objects/CCS_Back_Office_Custom_Settings__c/CCS_Back_Office_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for sending email notifications to BO, contains email addresses, products with Country (CZ/SK) combinations.</description>
    <label>CCS Back Office Custom Settings</label>
</CustomObject>