default/objects/CCS_Back_Office_Custom_Settings__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Only &quot;Czech Republic&quot; and &quot;Slovakia&quot; is allowed. Respect the Salesforce format (e.g. no &quot;Slovensko&quot;, &quot;Česká republika&quot; or &quot;ČR&quot;).</description>
    <label>Country</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>