default/objects/CCS_Back_Office_Custom_Settings__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Where should be the email notification sent? Use only valid email addresses.</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>