default/objects/CCS_Back_Office_Custom_Settings__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Used to compare Product value here and Product_Solicited__c on Opportunity. Please put only correct values here.</description>
    <label>Product</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>